// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The concession helper ageConcessionHelper if is normal licence, removes Junior concession 1`] = `
Object {
  "concessions": Array [],
  "licenceStartDate": "2020-06-06",
  "licensee": Object {
    "birthDate": "1985-06-06",
    "firstName": "Johnny",
    "lastName": "Test",
    "preferredMethodOfConfirmation": "Letter",
  },
}
`;

exports[`The concession helper ageConcessionHelper if is normal licence, removes Senior concession 1`] = `
Object {
  "concessions": Array [],
  "licenceStartDate": "2020-06-06",
  "licensee": Object {
    "birthDate": "1985-06-06",
    "firstName": "Johnny",
    "lastName": "Test",
    "preferredMethodOfConfirmation": "Letter",
  },
}
`;

exports[`The concession helper ageConcessionHelper if the licensee is a junior, sets license data, junior concession and contact methods 1`] = `
Object {
  "concessions": Array [
    Object {
      "proof": Object {
        "type": "No Proof",
      },
      "type": "Junior",
    },
  ],
  "licenceLength": "12M",
  "licenceStartDate": "2020-06-06",
  "licenceStartTime": "0",
  "licensee": Object {
    "birthDate": "2006-06-06",
    "firstName": "Johnny",
    "lastName": "Test",
    "preferredMethodOfConfirmation": "Prefer not to be contacted",
    "preferredMethodOfReminder": "Prefer not to be contacted",
  },
}
`;

exports[`The concession helper ageConcessionHelper if the licensee is a minor, sets noLicenceRequired flag to true 1`] = `
Object {
  "licenceStartDate": "2020-06-06",
  "licensee": Object {
    "birthDate": "2012-06-06",
    "firstName": "Johnny",
    "lastName": "Test",
    "noLicenceRequired": true,
    "preferredMethodOfConfirmation": "Letter",
  },
}
`;

exports[`The concession helper ageConcessionHelper if the licensee is a senior, adds senior concession 1`] = `
Object {
  "concessions": Array [
    Object {
      "proof": Object {
        "type": "No Proof",
      },
      "type": "Senior",
    },
  ],
  "licenceStartDate": "2020-06-06",
  "licensee": Object {
    "birthDate": "1953-06-06",
    "firstName": "Johnny",
    "lastName": "Test",
    "preferredMethodOfConfirmation": "Letter",
  },
}
`;
